--- a/keisatsu.html
+++ b/keisatsu.html
@@ -63,6 +63,6 @@
   <p>悪い夢を取り締まる任務を与えましょう</p>
   <img src="./images/keisatsu.png" alt="クリスマス警察のイラスト">
   <p>一人選んで逮捕できます！</p>
-  <p>緊急呼び出しのため、帰ったらおとなしく自宅待機しましょう</p>
+  <p>緊急呼び出し対応のため、帰ったらおとなしく自宅待機しましょう</p>
 </body>
 </html>
