--- a/boy_waiting_for_present.html
+++ b/boy_waiting_for_present.html
@@ -123,7 +123,8 @@
 
   /* 画像（ふわっと浮く＋プレゼントの輝き） */
   img {
-    width: min(50vh, 70vw);
+    width: 40vw;
+    margin-top: 20px;
     max-width: 520px;
     border-radius: 18px;
     border: 2px solid rgba(255,255,255,0.3);
